tests/neg/i12448.scala
object Main {
  def mkArray[T <: A]: T#AType // error // error
  mkArray[Array]
  val x = mkArray[Array]
}
